# rcm-stage1

./: .gitignore  LICENSE  NPP.md  __init__.py  agent.py  app.py  config.py  faiss.index  main.py  prompts.py  pyproject.toml  requirments.txt  sample_form_filling.json
learn/faissdb_mcp/: agents.py  faiss_server.py  helper.py  pyproject.toml  requirments.txt  semantic_chunks.json  try_server.py
learn/faissdb_mcp/mcp_servers/: faiss_server.py  vector_search_server.py
learn/faissdb_mcp/tools/: __init__.py
learn/faissdb_mcp/utils/: faiss-db-retrival-llm.py  faissdb_ingestion.py  temp_chunking.py
pg_db/: db_creation.sql
tools/: agent.py  prompt.py
