[project]
name = "temp-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.9.2",
    "google-adk>=1.5.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "sentence-transformers>=4.1.0",
]
